@@ -61,6 +61,10 @@ Testing double vector initialisation with: "23.3 1232.7 0.111 1.525 0.333":
 v = [23.3 1232.7 0.111 1.525 0.333]
 Testing double vector initialisation with: "-10.000 :.5:-4.5":
 v = [-10 -9.5 -9 -8.5 -8 -7.5 -7 -6.5 -6 -5.5 -5 -4.5]
+Testing double vector initialisation with: "0:.2: 3":
+v = [0 0.2 0.4 0.6 0.8 1 1.2 1.4 1.6 1.8 2 2.2 2.4 2.6 2.8 3]
+Testing double vector initialisation with: "1e0:1.5:1E+1":
+v = [1 2.5 4 5.5 7 8.5 10]
 Testing int vector initialisation with: "0xA : -010":
 iv = [10 9 8 7 6 5 4 3 2 1 0 -1 -2 -3 -4 -5 -6 -7 -8]
 Testing short int vector initialisation with: "3 0xF -10, 0133 0177, 0x0 ":
